# vlp

./: Makefile  README.md  meson.build
completions/: vlp
src/: main.c  meson.build  vlp.1.in  vlp.c  vlp.h
